--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -802,7 +802,6 @@ a {
 .cid-s48OLK6784 .navbar .navbar-collapse {
   justify-content: flex-end;
   z-index: 1;
-  display: none !important;
 }
 .cid-s48OLK6784 .navbar.collapsed .nav-item .nav-link::before {
   display: none;
@@ -1035,6 +1034,45 @@ a {
 .cid-trOotJ54yc .mbr-text,
 .cid-trOotJ54yc .mbr-section-btn {
   color: #e6c63b;
+}
+.cid-trQxHv3uMn {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-trQxHv3uMn .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-trQxHv3uMn img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-trQxHv3uMn .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-trQuRacRag {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-trQuRacRag .mbr-overlay {
+  background-color: #ffffff;
+  opacity: 0.4;
+}
+.cid-trQuRacRag form .mbr-section-btn {
+  text-align: center;
+  width: 100%;
+}
+.cid-trQuRacRag form .mbr-section-btn .btn {
+  display: inline-flex;
+}
+@media (max-width: 991px) {
+  .cid-trQuRacRag form .mbr-section-btn .btn {
+    width: 100%;
+  }
 }
 .cid-trOtQT5px9 {
   padding-top: 2rem;
