--- a/spatial/css/style.css
+++ b/spatial/css/style.css
@@ -235,7 +235,7 @@
 		-o-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: rgba(144, 144, 144, 0.075);
+		background: rgba(224, 224, 213, .90);
 		border-radius: 4px;
 		border: none;
 		border: solid 1px rgba(144, 144, 144, 0.25);
@@ -302,6 +302,7 @@
 	input[type="email"],
 	select {
 		height: 2.75em;
+		background-color: rgba(224, 224, 213, .90)
 	}
 
 	textarea {
