--- a/spatial/css/style.css
+++ b/spatial/css/style.css
@@ -239,10 +239,6 @@
 		border-radius: 4px;
 		border: none;
 		border: solid 1px rgba(196, 139, 122, 1);
-		background: rgba(144, 144, 144, 0.075);
-		border-radius: 4px;
-		border: none;
-		border: solid 1px rgba(144, 144, 144, 0.25);
 		color: inherit;
 		display: block;
 		outline: 0;
@@ -782,7 +778,7 @@
 		-o-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: #323037;
+		background-color: #c48b7a;
 		border-radius: 4px;
 		border: 0;
 		color: #ffffff !important;
@@ -802,7 +798,7 @@
 		input[type="reset"]:hover,
 		input[type="button"]:hover,
 		.button:hover {
-			background-color: #c48b7a;
+			background-color: #b7a267;
 		}
 
 		input[type="submit"]:active,
