--- a/spatial/css/style.css
+++ b/spatial/css/style.css
@@ -12,6 +12,7 @@
 
 	body {
 		background: #e0e0d5;
+		font-family: "Raleway", Arial, Helvetica, sans-serif;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
