--- a/spatial/css/style-medium.css
+++ b/spatial/css/style-medium.css
@@ -85,13 +85,13 @@
 			content: url("../images/icons8-hamburger-menu-24.png");
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
-			font-family: FontAwesome;
+			font-family: "Raleway", Arial, Helvetica, sans-serif;
 			font-style: normal;
 			font-weight: normal;
 			font-size: 16px;
 			text-transform: none !important;
 			padding-top: 5px;
-		}
+	}
 
 		#navButton .toggle:before {
 			background: rgba(144, 144, 144, 0.2);
