--- a/spatial/css/style.css
+++ b/spatial/css/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
-@import "http://fonts.googleapis.com/css?family=Raleway:400,700";
+@import "http://fonts.googleapis.com/css2?family=Raleway:400,700";
+
 
 /*
 	Spatial by TEMPLATED
