--- a/spatial/css/style.css
+++ b/spatial/css/style.css
@@ -1125,7 +1125,7 @@
 
 		.wrapper.style3 {
 			background-attachment: fixed;
-			background-image: url("images/overlay.png"), url("../images/banner.jpg");
+			background-image: url("images/overlay.png"), url("../images/contact-banner.jpg");
 			background-position: center center;
 			background-size: cover;
 		}
