--- a/spatial/css/style.css
+++ b/spatial/css/style.css
@@ -261,8 +261,8 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #f32853;
-			box-shadow: 0 0 0 1px #f32853;
+			border-color: #c48b7a;
+			box-shadow: 0 0 0 1px #c48b7a;
 		}
 
 	.select-wrapper {
@@ -318,18 +318,20 @@
 		-o-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
+		background-color: rgba(224, 224, 213, .90);
 		display: block;
 		float: left;
 		margin-right: -2em;
 		opacity: 0;
 		width: 1em;
 		z-index: -1;
+		
 	}
 
 		input[type="checkbox"] + label,
 		input[type="radio"] + label {
 			text-decoration: none;
-			color: #666;
+			color: #fff;
 			cursor: pointer;
 			display: inline-block;
 			font-size: 1em;
@@ -337,6 +339,7 @@
 			padding-left: 2.4em;
 			padding-right: 0.75em;
 			position: relative;
+			
 		}
 
 			input[type="checkbox"] + label:before,
@@ -347,11 +350,12 @@
 				font-style: normal;
 				font-weight: normal;
 				text-transform: none !important;
+				
 			}
 
 			input[type="checkbox"] + label:before,
 			input[type="radio"] + label:before {
-				background: rgba(144, 144, 144, 0.075);
+				background-color: rgba(224, 224, 213, .90);
 				border-radius: 4px;
 				border: solid 1px rgba(144, 144, 144, 0.25);
 				content: '';
@@ -369,14 +373,14 @@
 		input[type="radio"]:checked + label:before {
 			background: #323037;
 			border-color: #323037;
-			color: #ffffff;
+			color: #000;
 			content: '\f00c';
 		}
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
 			border-color: #f32853;
-			box-shadow: 0 0 0 1px #f32853;
+			box-shadow: 0 0 0 1px #c48b7a;
 		}
 
 	input[type="checkbox"] + label:before {
