--- a/spatial/css/style.css
+++ b/spatial/css/style.css
@@ -1060,23 +1060,21 @@
 /* Banner */
 
 	#banner {
-		padding: 4em 0 2em 0;
+		padding: 9em 0 2em 0;
 		background-attachment: fixed;
 		background-image: url("../images/banner-jmkjr.jpg");
 		background-position: center top;
 		background-size: cover;
 		line-height: 1.75;
-		
-			
 		text-align: center;
 		
 	}
 #banner h2 {
 			color: #ffffff;
 			display: inline-block;
-			font-size: 0em;
-			line-height: 0;
-			margin-bottom: 0em;
+			font-size: 3.5em;
+			line-height: 1.35;
+			margin-bottom: 0.5em;
 		}
 #banner img {
 			color: #ffffff;
@@ -1207,8 +1205,9 @@
         #banner img{
           display: block;
 			position: relative;
-			top: 100px;
-			left: 100px;
+			top: 200px;
+    		left: 40%;
+   			margin-right: -50%;
 			font-size: 3.5em;
         }
       }
@@ -1229,7 +1228,7 @@
           display: block;
 			position: relative;
 			top: 200px;
-			left: 1000px;
+			left: 890px;
 			font-size: 3.5em;
         }
       }
