--- a/spatial/css/style.css
+++ b/spatial/css/style.css
@@ -1206,7 +1206,7 @@
           display: block;
 			position: relative;
 			top: 200px;
-    		left: 40%;
+    		left: 50%;
    			margin-right: -50%;
 			font-size: 3.5em;
         }
@@ -1217,7 +1217,8 @@
 			color: #ffffff;
 			position: relative;
 			top: 200px;
-			left: 600px;
+			left: 50%;
+   			margin-right: -50%;
 			font-size: 3.5em;
         }
       }
