--- a/css/style.css
+++ b/css/style.css
@@ -1159,12 +1159,13 @@
 			-o-transition: color 0.2s ease-in-out;
 			-ms-transition: color 0.2s ease-in-out;
 			transition: color 0.2s ease-in-out;
-			color: #aaa;
+			color: #7a6d4e;
 			text-decoration: none;
 		}
 
 			#footer a:active, #footer a:hover {
 				color: #666;
+				text-decoration: underline;
 			}
 
 		#footer .icons {
