--- a/css/style.css
+++ b/css/style.css
@@ -709,16 +709,18 @@
 	table {
 		margin: 0 0 2em 0;
 		width: 100%;
+		color: #e0e0d5;
+		text-align: center;
 	}
 
 		table tbody tr {
-			border: solid 1px rgba(144, 144, 144, 0.25);
+			border: solid 1px rgba(144, 144, 144, 0.5);
 			border-left: 0;
 			border-right: 0;
 		}
 
 			table tbody tr:nth-child(2n + 1) {
-				background-color: rgba(144, 144, 144, 0.075);
+				background-color: rgba(144, 144, 144, 0.085);
 			}
 
 		table td {
