--- a/css/style-medium.css
+++ b/css/style-medium.css
@@ -83,7 +83,7 @@
 	}
 
 		#navButton .toggle:before {
-			content: url("../images/icons8-hamburger-menu-24.png");
+			content: url("../images/hamburger-wh-50.png");
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
 			font-family: "Raleway", Arial, Helvetica, sans-serif;
@@ -91,16 +91,16 @@
 			font-weight: normal;
 			font-size: 16px; 
 			text-transform: none !important;
-			padding-top: 5px;
+			padding-top: 12px;
 	}
 
 		#navButton .toggle:before {
-			background: rgba(144, 144, 144, 0.2);
+			background: rgba(144, 144, 144, .7);
 			border-radius: 4px;
 			color: #7a6d4e;
 			display: block;
 			font-size: 16px;
-			height: 2.25em;
+			height: 50px;
 			left: 0.5em;
 			line-height: 2.25em;
 			position: absolute;
@@ -110,8 +110,10 @@
 			
 		}
 
+
+
 	#navPanel {
-		background: #b7a267;
+		background: #000;
 		color: #000;
 	}
 
@@ -136,7 +138,7 @@
 
 					#navPanel nav ul li a:not(.button), #navPanel nav ul li span:not(.button) {
 						border-top: solid 1px #555;
-						color: #000;
+						color: #fff;
 						display: block;
 						padding: 0.75em 0;
 						text-decoration: none;
