--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 /* Basic */
 
 	body {
-		background: #e0e0d5;
+		background: #f2f2e4;
 		font-family: 'Raleway', Arial, Helvetica, sans-serif;
 	}
 
@@ -236,7 +236,7 @@
 		-o-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: rgba(224, 224, 213, .90);
+		background: #f5f5f0;
 		border-radius: 4px;
 		border: none;
 		border: solid 1px rgba(196, 139, 122, 1);
@@ -303,7 +303,7 @@
 	input[type="email"],
 	select {
 		height: 2.75em;
-		background-color: rgba(224, 224, 213, .90)
+		background-color: #f5f5f0;
 
 	}
 
@@ -318,7 +318,7 @@
 		-o-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background-color: rgba(224, 224, 213, .90);
+		background-color: #f5f5f0;
 		display: block;
 		float: left;
 		margin-right: -2em;
@@ -355,7 +355,7 @@
 
 			input[type="checkbox"] + label:before,
 			input[type="radio"] + label:before {
-				background-color: rgba(224, 224, 213, .90);
+				background-color: #f5f5f0;
 				border-radius: 4px;
 				border: solid 1px rgba(144, 144, 144, 0.25);
 				content: '';
@@ -1047,7 +1047,7 @@
 			}
 
 				#header.alt nav a {
-					color: #000000;
+					color: #FFF;
 				}
 
 					#header.alt nav a:active, #header.alt nav a:hover {
@@ -1064,7 +1064,7 @@
 	#banner {
 		padding: 9em 0 2em 0;
 		background-attachment: fixed;
-		background-image: url("../images/banner-jmkjr.jpg");
+		background-image: url("../images/jmkphotos31-web1.1.jpg");
 		background-position: center top;
 		background-size: cover;
 		line-height: 1.75;
@@ -1124,7 +1124,7 @@
 	}
 
 		.wrapper.style2 {
-			background-color: #e0e0d5;
+			background-color: #f5f5f0;
 		}
 
 		.wrapper.style3 {
@@ -1150,7 +1150,7 @@
 
 	#footer {
 		padding: 4em 0 2em 0;
-		background: #e0e0d5;
+		background: #f5f5f0;
 		color: #7a6d4e;
 		text-align: center;
 	}
@@ -1227,15 +1227,14 @@
       }
 
       
-@media (min-width: 1024px) {
+@media (min-width: 1023px) {
         #banner img{
           display: block;
 			position: relative;
 			top: 200px;
 			left: 890px;
+			left: 80%;
 			font-size: 3.5em;
         }
       }
-
-
 
