New Release - fifteen days 2

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #b7a267;
+		color: #40403d;
 		font-weight: 700;
 		line-height: 1em;
 		margin: 0 0 1em 0;
@@ -709,7 +709,7 @@
 	table {
 		margin: 0 0 2em 0;
 		width: 100%;
-		color: #e0e0d5;
+		color: #40403d;
 		text-align: center;
 	}
 
